--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,7 +21,7 @@ services:
       dockerfile: Dockerfile
     container_name: corpjukdev_dj01
     environment:
-      - DJANGO_SETTINGS_MODULE=eatplants.settings.prod
+      - DJANGO_SETTINGS_MODULE=eatplants.settings.dev
       - PYTHONDONTWRITEBYTECODE=1
     volumes:
       - ./static:/app/static
@@ -32,13 +32,10 @@ services:
   nginx:
     restart: always
     image: nginx:1.15-alpine
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     container_name: corpjukdev_ng01
     volumes:
-      - ./config/nginx-prod.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./static:/usr/share/nginx/corpjukdev/static
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
     ports:
       - "80:80"
       - "443:443"
@@ -46,12 +43,5 @@ services:
       - main
     depends_on:
       - app
-      - certbot
-  certbot:
-    image: certbot/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"    
-    volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-    networks:
-      - main
+networks:
+  main:
