--- a/config/logging.conf
+++ b/config/logging.conf
@@ -1,48 +1,26 @@
 [loggers]
-keys=root, gunicorn.error, gunicorn.access
+keys=root, gunicorn.error
 
 [handlers]
-keys=console, error_file, access_file
+keys=console
 
 [formatters]
-keys=generic, access
+keys=json
 
 [logger_root]
 level=INFO
 handlers=console
 
 [logger_gunicorn.error]
-level=INFO
-handlers=error_file
-propagate=1
-qualname=gunicorn.error
-
-[logger_gunicorn.access]
-level=INFO
-handlers=access_file
+level=ERROR
+handlers=console
 propagate=0
-qualname=gunicorn.access
-
+qualname=gunicorn.error
+	
 [handler_console]
 class=StreamHandler
-formatter=generic
+formatter=json
 args=(sys.stdout, )
 
-[handler_error_file]
-class=logging.FileHandler
-formatter=generic
-args=('/tmp/gunicorn.error.log',)
-
-[handler_access_file]
-class=logging.FileHandler
-formatter=access
-args=('/tmp/gunicorn.access.log',)
-
-[formatter_generic]
-format=%(asctime)s [%(process)d] [%(levelname)s] %(message)s
-datefmt=%Y-%m-%d %H:%M:%S
-class=logging.Formatter
-
-[formatter_access]
-format=%(message)s
-class=logging.Formatter
+[formatter_json]
+class=jsonlogging.JSONFormatter
