--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     restart: always
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.prod
     container_name: corpjukdev_dj01
     environment:
       - DJANGO_SETTINGS_MODULE=eatplants.settings.prod
@@ -53,5 +53,5 @@ services:
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
-    networks:
-      - main
+networks:
+  - main
