--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,5 +53,7 @@ services:
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
+    networks:
+      - main
 networks:
   main:
