--- a/config/nginx-prod.conf
+++ b/config/nginx-prod.conf
@@ -22,6 +22,9 @@ server {
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; preload";
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
     return 301 https://corpjukdev.dev$request_uri;
 }
 
