--- a/config/nginx-prod.conf
+++ b/config/nginx-prod.conf
@@ -73,6 +73,7 @@ server {
         location /static/download/ {
             location ~* \.(pdf|docx|zip|rar)$ {
                 add_header Content-Disposition 'attachment; filename="$request_filename"';
+                add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";      
             }
         }
     }
