--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -28,4 +28,4 @@ EXPOSE 8001
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
-CMD ["/usr/local/bin/gunicorn", "--config", "config/gunicorn.conf", "--log-config", "config/logging.conf", "-e", "DJANGO_SETTINGS_MODULE=sasite.settings.production", "-w", "4", "-b", "0.0.0.0:8001", "sasite.wsgi:application"]
+CMD ["/usr/local/bin/gunicorn", "--config", "config/gunicorn.py", "--log-config", "config/logging.conf", "-e", "DJANGO_SETTINGS_MODULE=sasite.settings.production", "-w", "4", "-b", "0.0.0.0:8001", "sasite.wsgi:application"]
