--- a/config/nginx-prod.conf
+++ b/config/nginx-prod.conf
@@ -4,42 +4,42 @@ upstream django_server {
 
 server {
     listen 443 ssl http2;
-    server_name www.corpjukdev.dev;
+    server_name www.corpjuk.dev;
 
-    ssl_certificate /etc/letsencrypt/live/corpjukdev.dev/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/corpjukdev.dev/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/corpjuk.dev/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/corpjuk.dev/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; preload";
 
-    return 301 https://corpjukdev.dev$request_uri;
+    return 301 https://corpjuk.dev$request_uri;
 }
 
 server {
     listen 80;
-    server_name corpjukdev.dev;  
+    server_name corpjuk.dev;  
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; preload";
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
-    return 301 https://corpjukdev.dev$request_uri;
+    return 301 https://corpjuk.dev$request_uri;
 }
 
 server {
     listen 80;
-    server_name www.corpjukdev.dev;  
+    server_name www.corpjuk.dev;  
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; preload";
 
-    return 301 https://corpjukdev.dev$request_uri;
+    return 301 https://corpjuk.dev$request_uri;
 }
 
 server {
     listen 443 default_server ssl http2;
-    server_name corpjukdev.dev;
+    server_name corpjuk.dev;
     client_max_body_size 4G;
     charset utf-8;
     keepalive_timeout 70;
@@ -47,8 +47,8 @@ server {
     # Security headers
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
 
-    ssl_certificate /etc/letsencrypt/live/corpjukdev.dev/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/corpjukdev.dev/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/corpjuk.dev/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/corpjuk.dev/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
