--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,7 +7,7 @@ ENV DJANGO_SETTINGS_MODULE=eatplants.settings.prod
 WORKDIR /app
 
 COPY manage.py /app/
-COPY requirements/ /app/
+COPY requirements/ /app/requirements/ 
 
 RUN pip install -r $requirements
 
