--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -16,6 +16,7 @@ COPY config config
 COPY eatplants eatplants
 COPY accounts accounts
 COPY articles articles
+COPY recipes recipes
 COPY templates templates
 
 RUN sh -c 'touch logs/corpjuksite.log'
