--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -17,6 +17,7 @@ COPY eatplants eatplants
 COPY accounts accounts
 COPY articles articles
 COPY recipes recipes
+COPY search search
 COPY templates templates
 
 RUN sh -c 'touch logs/corpjuksite.log'
