--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - main
     depends_on:
       - db
+    env_file:
+      - .env
   nginx:
     restart: always
     image: nginx:1.15-alpine
