--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: postgres:10.1-alpine
     container_name: corpjukdev_pg01
     environment:
-      POSTGRES_DB: db
-      POSTGRES_USER: pguser
-      POSTGRES_PASSWORD: pguser123
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - ./pg-data:/var/lib/postgresql/data/
     ports:
@@ -21,7 +21,6 @@ services:
       dockerfile: Dockerfile.prod
     container_name: corpjukdev_dj01
     environment:
-      - SECRET_KEY="${SECRET_KEY}"
       - DJANGO_SETTINGS_MODULE=eatplants.settings.prod
       - PYTHONDONTWRITEBYTECODE=1
     volumes:
