--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,6 +1,6 @@
-upstream django_server {
-    server app:8001 fail_timeout=0;
-}
+# upstream django_server {
+#     server app:8001 fail_timeout=0;
+# }
 
 server {
     listen 80;
@@ -8,16 +8,25 @@ server {
     client_max_body_size 4G;
     charset utf-8;
     keepalive_timeout 5;
-    location /static/ {
-        root /usr/share/nginx/corpjukdev/;
-        expires 30d;
-    }
+    
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+    include /etc/nginx/mime.types;
     location / {
+
         proxy_redirect     off;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Host $server_name;
-        proxy_pass http://django_server;
+        proxy_pass http://127.0.0.1:8001;
+        # proxy_pass http://django_server;
     }
+
+    location /static/ {
+        
+        root /usr/share/nginx/corpjukdev/;
+        expires 30d;
+        autoindex off;
+    } 
 }
