--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,11 +5,10 @@ services:
     image: postgres:10.1-alpine
     container_name: corpjukdev_pg01
     environment:
-      POSTGRES_DB: db
-      POSTGRES_USER: pguser
-      POSTGRES_PASSWORD: pguser123
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     volumes:
-      - ./pg-data:/var/lib/postgresql/data/
+      - ./pg-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     networks:
@@ -23,10 +22,16 @@ services:
     environment:
       - DJANGO_SETTINGS_MODULE=eatplants.settings.dev
       - PYTHONDONTWRITEBYTECODE=1
+      - SECRET_KEY=(iw=q)rdu%xe4+y+xg1kh+-j18l8#(%8uosq_gz3^r6ckl&
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     volumes:
       - ./static:/app/static
     networks:
       - main
+    ports:
+      - "8001:8001"
     depends_on:
       - db
   nginx:
@@ -34,7 +39,7 @@ services:
     image: nginx:1.15-alpine
     container_name: corpjukdev_ng01
     volumes:
-      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./static:/usr/share/nginx/corpjukdev/static
     ports:
       - "80:80"
@@ -43,5 +48,20 @@ services:
       - main
     depends_on:
       - app
+  fastapi:
+    build:
+      dockerfile: Dockerfile.fastapi
+    image: fastapi
+    environment:
+      - DEBUG=0
+      - ECHO_ACTIVE=0
+      - APP_AUTH_TOKEN=GDuKzKRcgjTN1ap7WrVte91fMX3k_l5A-XTgUCP_RXc
+      - OCR_API_TOKEN_HEADER=E3FF2839C048B25C084DEBE9B26995E310250568
+    ports:
+      - "3000:3000"
+    networks:
+      - main
+    links:
+      - "app"
 networks:
   main:
